Dynamic-access coverage for akka.io.dns.DnsSettings$ (17/36)